--- a/prueba/src/app/componentes/login/login.page.html
+++ b/prueba/src/app/componentes/login/login.page.html
@@ -17,6 +17,8 @@
 </ion-item>
 <br>
 <ion-button (click)="onSubmitLogin()" expand="block">Entrar</ion-button>
+<br>
+<p text-center style="color: red;"  routerLink="/usuarios">Crear cuenta</p>
 
 
 
