--- a/prueba/src/global.scss
+++ b/prueba/src/global.scss
@@ -24,3 +24,17 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.icon{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.icon1{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
